--- a/index.html
+++ b/index.html
@@ -241,6 +241,86 @@
   </div>
 
   <script>
+
+// Fungsi untuk mendaftarkan push notification
+async function registerPushNotifications() {
+  if (!('serviceWorker' in navigator)) return null;
+  
+  const registration = await navigator.serviceWorker.ready;
+  
+  if (!('PushManager' in window)) return null;
+  
+  // Gunakan VAPID key (buat di https://web-push-codelab.glitch.me/)
+  const vapidPublicKey = 'BLxwXv4O3...'; // Ganti dengan VAPID key Anda
+  
+  const subscription = await registration.pushManager.subscribe({
+    userVisibleOnly: true,
+    applicationServerKey: urlBase64ToUint8Array(vapidPublicKey)
+  });
+  
+  return subscription;
+}
+
+// Helper function untuk VAPID key
+function urlBase64ToUint8Array(base64String) {
+  const padding = '='.repeat((4 - base64String.length % 4) % 4);
+  const base64 = (base64String + padding)
+    .replace(/-/g, '+')
+    .replace(/_/g, '/');
+
+  const rawData = window.atob(base64);
+  const outputArray = new Uint8Array(rawData.length);
+
+  for (let i = 0; i < rawData.length; ++i) {
+    outputArray[i] = rawData.charCodeAt(i);
+  }
+  return outputArray;
+}
+
+// Kirim subscription ke server
+async function sendSubscriptionToServer(subscription) {
+  try {
+    const response = await fetch('https://api.diioffc.web.id/api/notifications/subscribe', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json',
+      },
+      body: JSON.stringify({
+        subscription: subscription,
+        userId: 'rezky' // Ganti dengan ID user yang sesuai
+      })
+    });
+    
+    return await response.json();
+  } catch (error) {
+    console.error('Error sending subscription:', error);
+    return null;
+  }
+}
+
+// Perbarui fungsi init()
+async function init() {
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('sw.js')
+      .then(registration => {
+        console.log('ServiceWorker registered');
+        return registration;
+      })
+      .then(registration => {
+        // Cek permission notifikasi
+        if (Notification.permission === 'granted') {
+          return registerPushNotifications()
+            .then(subscription => {
+              if (subscription) {
+                return sendSubscriptionToServer(subscription);
+              }
+            });
+        }
+      })
+      .catch(err => console.log('ServiceWorker registration failed: ', err));
+  }
+
+  }
     const alyaAvatar = document.getElementById('alya-avatar');
     const statusBox = document.getElementById('status');
     const chatResult = document.getElementById('chat-result');
